--- a/libcaf_core/CMakeLists.txt
+++ b/libcaf_core/CMakeLists.txt
@@ -44,6 +44,7 @@ set (LIBCAF_CORE_SRCS
      src/exception.cpp
      src/execution_unit.cpp
      src/exit_reason.cpp
+     src/forwarding_actor_proxy.cpp
      src/get_mac_addresses.cpp
      src/get_root_uuid.cpp
      src/group.cpp
