--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -261,7 +261,6 @@ if(CAF_FOR_RIOT)
     set(LD_FLAGS "${LD_FLAGS} -m32")
   endif()
   if (CROSS_CXX_FLAGS)
-    message(STATUS "Setting CMAKE_CXX_FLAGS to ${CROSS_CXX_FLAGS}")
     SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${CROSS_C_FLAGS}")
     SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CROSS_CXX_FLAGS}")
   endif()
@@ -364,6 +363,7 @@ endif()
 # include files to build for RIOT
 if(CAF_FOR_RIOT)
   include_directories("${RIOT_BASE_DIR}/sys/include/.")
+  include_directories("${RIOT_BASE_DIR}/sys/net/include/.")
   include_directories("${RIOT_BASE_DIR}/core/include/.")
   include_directories("${RIOT_BASE_DIR}/cpu/native/include/.")
 endif()
