Add either/or interface definitions
The new `replies_to<...>::with_either<...>::or_else<...>` notation allows
developers to have success/failure messages for typed actors. Message handlers
need to use the corresponding `either<...>::or_else<...>` result type.

--- a/libcaf_core/CMakeLists.txt
+++ b/libcaf_core/CMakeLists.txt
@@ -62,6 +62,7 @@ set (LIBCAF_CORE_SRCS
      src/node_id.cpp
      src/ref_counted.cpp
      src/response_promise.cpp
+     src/replies_to.cpp
      src/resumable.cpp
      src/ripemd_160.cpp
      src/scoped_actor.cpp
