Properly set include path for CURL

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -107,6 +107,7 @@ if(NOT CAF_NO_CURL_EXAMPLES)
   find_package(CURL)
   if(CURL_FOUND)
     add_executable(curl_fuse curl/curl_fuse.cpp)
+    include_directories(${CURL_INCLUDE_DIRS})
     target_link_libraries(curl_fuse ${CMAKE_DL_LIBS} ${LIBCAF_LIBRARIES} ${PTHREAD_LIBRARIES} ${CURL_LIBRARY})
     add_dependencies(curl_fuse all_examples)
   endif(CURL_FOUND)
