--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -329,10 +329,9 @@ set(LIBCAF_LIBRARIES "${LIBCAF_CORE_LIBRARY}"
 # add unit tests if not being told otherwise
 if(NOT CAF_NO_UNIT_TESTS)
   enable_testing()
-  add_subdirectory(unit_testing)
-  add_dependencies(all_unit_tests libcaf_core libcaf_io)
-  if(NOT CAF_NO_OPENCL
-     AND EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/libcaf_opencl/CMakeLists.txt")
+  add_subdirectory(libcaf_test)
+  add_dependencies(all_unit_tests libcaf_io)
+  if(NOT CAF_NO_OPENCL AND EXISTS "${CMAKE_SOURCE_DIR}/libcaf_opencl/CMakeLists.txt")
     add_subdirectory(libcaf_opencl/unit_testing)
   endif()
 endif()
