--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -269,17 +269,29 @@ include_directories("${LIBCAF_INCLUDE_DIRS}")
 message(STATUS "Enter subdirectory libcaf_core")
 add_subdirectory(libcaf_core)
 # set core lib for sub directories
-set(LIBCAF_CORE_LIBRARY libcaf_core)
+if(NOT CAF_BUILD_STATIC_ONLY)
+  set(LIBCAF_CORE_LIBRARY libcaf_core)
+else()
+  set(LIBCAF_CORE_LIBRARY libcaf_coreStatic)
+endif()
 message(STATUS "Enter subdirectory libcaf_io")
 add_subdirectory(libcaf_io)
 # set io lib for sub directories
-set(LIBCAF_IO_LIBRARY libcaf_io)
+if(NOT CAF_BUILD_STATIC_ONLY)
+  set(LIBCAF_IO_LIBRARY libcaf_io)
+else()
+  set(LIBCAF_IO_LIBRARY libcaf_ioStatic)
+endif()
 # set opencl lib for sub directories if not told otherwise
 if(NOT CAF_NO_OPENCL AND EXISTS "${CMAKE_SOURCE_DIR}/libcaf_opencl/CMakeLists.txt")
   message(STATUS "Enter subdirectory libcaf_opencl")
   find_package(OPENCL REQUIRED)
   add_subdirectory(libcaf_opencl)
-  set(LIBCAF_OPENCL_LIBRARY libcaf_opencl)
+  if(NOT CAF_BUILD_STATIC_ONLY)
+    set(LIBCAF_OPENCL_LIBRARY libcaf_opencl)
+  else()
+    set(LIBCAF_OPENCL_LIBRARY libcaf_openclStatic)
+  endif()
 endif()
 # tell CMake caf_io depends on caf_core
 if(CAF_BUILD_STATIC_ONLY OR CAF_BUILD_STATIC)
