Add a profiled scheduler for workers and jobs.
The new profiled<Policy> scheduling policy wraps an existing policy and
injects its own instrumentation calls to report to the
profiled_coordinator scheduler. This coordinator enables fine-grained
profiling of workers and jobs (actors) by calling getrusage before and
after each job resumption. It logs its measurements at a given
resolution to a file, with absolute and cumulative timings. One can
activate the new scheduler as follows:

    set_scheduler(
      new scheduler::profiled_coordinator<>{
        "/tmp/caf.log", std::chrono::milliseconds{1000}, threads, thruput});

This would log to "/tmp/caf.log" at a resolution of 1 second.

 Example output:

    clock                type      id        time           usr            sys            mem
    1424927236617568099  worker    0         37             0              37             0
    1424927236618379099  worker    6         252            0              252            0
    1424927236619565099  worker    2         221            0              221            0
    1424927236619592099  worker    31        289            0              289            0
    1424927236619794099  worker    3         100            0              100            0
    1424927236620048099  worker    4         141            0              141            0
    1424927236620153099  worker    5         62             0              62             0
    1424927236620386099  worker    20        115            0              114            0
    1424927236620491099  worker    19        819            0              819            0
    1424927236620516099  worker    8         190            0              190            0
    1424927236620677099  worker    12        132            0              132            0
    1424927236620850099  worker    7         217            0              124            0
    1424927236621032099  worker    9         96             0              96             0
 

--- a/unit_testing/CMakeLists.txt
+++ b/unit_testing/CMakeLists.txt
@@ -45,3 +45,6 @@ add_unit_test(typed_remote_actor)
 add_unit_test(unpublish)
 add_unit_test(optional)
 add_unit_test(fixed_stack_actor)
+if (NOT WIN32)
+  add_unit_test(profiled_coordinator)
+endif ()
