Add new decorator for concatenated messages
It is now possible to concatenate messages via `message::concat(xs...)` or by
using the `operator+`. Closes #173

--- a/libcaf_core/CMakeLists.txt
+++ b/libcaf_core/CMakeLists.txt
@@ -35,6 +35,7 @@ set (LIBCAF_CORE_SRCS
      src/binary_serializer.cpp
      src/blocking_actor.cpp
      src/channel.cpp
+     src/concatenated_tuple.cpp
      src/continue_helper.cpp
      src/decorated_tuple.cpp
      src/default_attachable.cpp
