Move FindOPENCL.cmake to the cmake folder
Moving the file requires the adjustment of the
CMAKE_MODULE_PATH. Since, cmake seems to prefer
its own FindOpenCL, ours is adjusted to use the
same variables for library and include paths.
(cmake does not ship the find scripts on all
platforms)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,7 +57,7 @@ if("${CMAKE_SOURCE_DIR}" STREQUAL "${CMAKE_BINARY_DIR}")
                         "initialize the build configuration.")
 endif()
 # set module path appropriately
-set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}")
+set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 # set binary output path if not defined by user
 if("${EXECUTABLE_OUTPUT_PATH}" STREQUAL "")
   set(EXECUTABLE_OUTPUT_PATH "${CMAKE_BINARY_DIR}/bin")
