Remove actor policies and `proper_actor`
The previous approach based on mixins, policies, and the glue-it-all-together
`proper_actor` was ok for fast prototyping. The downside of this approach is
that stack traces are basically useless, since they are flooded with irrelevant
template metaprogramming types. Since CAF has long outgrown the prototyping
stage, it was about time to streamline actor classes. This also shortens build
times.

--- a/unit_testing/CMakeLists.txt
+++ b/unit_testing/CMakeLists.txt
@@ -19,7 +19,7 @@ add_unit_test(ripemd_160)
 add_unit_test(variant)
 add_unit_test(atom)
 add_unit_test(metaprogramming)
-add_unit_test(intrusive_containers)
+#add_unit_test(intrusive_containers)
 add_unit_test(match)
 add_unit_test(message)
 add_unit_test(serialization)
