Add build options and "meta build script" for iOS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -193,6 +193,17 @@ if(MINGW)
 else()
   set(EXTRA_FLAGS "${EXTRA_FLAGS} -fPIC")
 endif()
+# iOS support
+if(CAF_OSX_SYSROOT)
+  set(CMAKE_OSX_SYSROOT "${CAF_OSX_SYSROOT}")
+endif()
+if(CAF_IOS_DEPLOYMENT_TARGET)
+  if("${CAF_OSX_SYSROOT}" STREQUAL "iphonesimulator")
+    set(EXTRA_FLAGS "${EXTRA_FLAGS} -mios-simulator-version-min=${CAF_IOS_DEPLOYMENT_TARGET}")
+  else()
+    set(EXTRA_FLAGS "${EXTRA_FLAGS} -miphoneos-version-min=${CAF_IOS_DEPLOYMENT_TARGET}")
+  endif()
+endif()
 # check if the user provided CXXFLAGS, set defaults otherwise
 if(CMAKE_CXX_FLAGS)
   set(CMAKE_CXX_FLAGS_DEBUG          "")
