Publish a stable version of the libraries to biicode.com

--- a/libcaf_io/biicode.conf
+++ b/libcaf_io/biicode.conf
@@ -1,9 +1,8 @@
 # Biicode configuration file
 
 [requirements]
-    # Blocks and versions this block depends on e.g.
-    # user/depblock1: 3
-    # user2/depblock2(track) @tag
+	 biicode/cmake: 3
+	 outro56/libcaf_core: 1
 
 [parent]
     outro56/libcaf_io: 0
@@ -33,7 +32,10 @@
 [includes]
     # Mapping of include patterns to external blocks
     # hello*.h: user3/depblock  # includes will be processed as user3/depblock/hello*.h
-
+    caf/detail/*.hpp : outro56/libcaf_core
+    caf/mixin/*.hpp : outro56/libcaf_core
+    caf/io/*.hpp : outro56/libcaf_io
+     
 [data]
     # Manually define data files dependencies, that will be copied to bin for execution
     # By default they are copied to bin/user/block/... which should be taken into account
