--- a/libcaf_core/CMakeLists.txt
+++ b/libcaf_core/CMakeLists.txt
@@ -68,6 +68,7 @@ set (LIBCAF_CORE_SRCS
      src/replies_to.cpp
      src/resumable.cpp
      src/ripemd_160.cpp
+     src/run_program.cpp
      src/scoped_actor.cpp
      src/set_scheduler.cpp
      src/serializer.cpp
