Simplified biicode integration for libcaf

--- a/biicode.conf
+++ b/biicode.conf
@@ -1,24 +1,27 @@
 # Biicode configuration file
 
 [requirements]
-	 biicode/cmake: 3
-	 outro56/libcaf_core: 1
+    biicode/cmake: 3
 
-[parent]
-    outro56/libcaf_io: 0
 [paths]
     # Local directories to look for headers (within block)
-    /
+    libcaf_core
+    libcaf_io
+    libcaf_opencl
+    libcaf_riac
+    nexus
+    cash
 
 [dependencies]
     # Manual adjust file implicit dependencies, add (+), remove (-), or overwrite (=)
-    *.hpp + *.cpp 
-    * + LICENSE LICENSE_ALTERNATIVE
+    * - cmake/get_compiler_version.cpp
+    *.hpp + !LICENSE !LICENSE_ALTERNATIVE !README.md
 
 [mains]
     # Manual adjust of files that define an executable
     # !main.cpp  # Do not build executable from this file
     # main2.cpp # Build it (it doesnt have a main() function, but maybe it includes it)
+    !cmake/get_compiler_version.cpp
 
 [tests]
     # Manual adjust of files that define a CTest test
@@ -32,13 +35,13 @@
 [includes]
     # Mapping of include patterns to external blocks
     # hello*.h: user3/depblock  # includes will be processed as user3/depblock/hello*.h
-    caf/detail/*.hpp : outro56/libcaf_core
-    caf/mixin/*.hpp : outro56/libcaf_core
-    caf/io/*.hpp : outro56/libcaf_io
-     
+
 [data]
     # Manually define data files dependencies, that will be copied to bin for execution
     # By default they are copied to bin/user/block/... which should be taken into account
     # when loading from disk such data
     # image.cpp + image.jpg  # code should write open("user/block/image.jpg")
 
+
+[parent]
+	outro56/actor-framework: 0
